log/build_2024-06-13_10-04-43/ros2_imu/stderr.log
cc1: warning: command-line option '-fpermissive' is valid for C++/ObjC++ but not for C
cc1: warning: command-line option '-fpermissive' is valid for C++/ObjC++ but not for C
cc1: warning: command-line option '-fpermissive' is valid for C++/ObjC++ but not for C
In file included from /home/ubuntu/ros2_ws/src/ros2_imu/src/ros2_imu.cpp:25:
/home/ubuntu/ros2_ws/src/ros2_imu/include/ros2_imu/ros2_imu_private.h:69:2: error: #error Code was generated for compiler with different sized ulong/long. Consider adjusting Test hardware word size settings on the Hardware Implementation pane to match your compiler word sizes as defined in limits.h of the compiler. Alternatively, you can select the Test hardware is the same as production hardware option and select the Enable portable word sizes option on the Code Generation > Verification pane for ERT based targets, which will disable the preprocessor word size checks.
   69 | #error Code was generated for compiler with different sized ulong/long. \
      |  ^~~~~
gmake[2]: *** [CMakeFiles/ros2_imu.dir/build.make:177: CMakeFiles/ros2_imu.dir/src/ros2_imu.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:140: CMakeFiles/ros2_imu.dir/all] Error 2
gmake: *** [Makefile:149: all] Error 2
